Fix bug w/ scrolling on mobile devices

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -311,8 +311,6 @@ body {
 **************************/
 .scrollbar {
   float: left;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
 
 #style-3::-webkit-scrollbar-track {
